--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,5 +33,5 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: maxheld83/ghpages@v0.3.0
       env:
-        GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+        GH_PAT: ${{ secrets.GH_PAT }}
         BUILD_DIR: test-documentation/build/
