--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,7 @@ jobs:
           name: whisperlab/slate-builder-action
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,3.0.0"
 
   deploy-docs-to-github-pages:
     needs: build-and-push-to-docker-hub
